feat: login page

--- a/biome.json
+++ b/biome.json
@@ -26,6 +26,9 @@
       },
       "suspicious": {
         "noExplicitAny": "off"
+      },
+      "a11y": {
+        "noSvgWithoutTitle": "off"
       }
     },
     "domains": {
